updated code to match java 8